[tool.poetry]
name = "ehr-agent"
version = "0.1.0"
description = ""
authors = ["Daniel Vela Jarquin <daniel.vela.j.1997@hotmail.com>"]
readme = "README.md"
packages = [{include = "ehr_agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
playwright = "^1.52.0"
claude-code-sdk = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
